[gd_scene load_steps=10 format=2]

[ext_resource path="res://asset/football-pitch_0.png" type="Texture" id=1]
[ext_resource path="res://Visualizza_modifica.gd" type="Script" id=2]
[ext_resource path="res://asset/chiari_theme.tres" type="Theme" id=3]
[ext_resource path="res://asset/sounds/object.wav" type="AudioStream" id=4]
[ext_resource path="res://asset/prova_theme.tres" type="Theme" id=5]
[ext_resource path="res://asset/reset.tres" type="Theme" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://asset/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 23
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 2
extra_spacing_bottom = 2
extra_spacing_char = 1
extra_spacing_space = 1
font_data = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]

[node name="Visualizza_modifica" type="Node2D"]
script = ExtResource( 2 )

[node name="campo_calcio" type="TextureRect" parent="."]
margin_right = 2068.0
margin_bottom = 1194.0
texture = ExtResource( 1 )
expand = true

[node name="Intest_chiari" type="Label" parent="."]
margin_left = 1390.0
margin_top = 90.0
margin_right = 1481.0
margin_bottom = 124.0
rect_scale = Vector2( 2.5, 2.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "CHIARI"
align = 1
valign = 1
uppercase = true
max_lines_visible = 1

[node name="Intest_scuri" type="Label" parent="."]
margin_left = 470.0
margin_top = 90.0
margin_right = 561.0
margin_bottom = 124.0
rect_scale = Vector2( 2.5, 2.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "SCURI"
align = 1
valign = 1
uppercase = true
max_lines_visible = 1

[node name="lista_chiari" type="VBoxContainer" parent="."]
self_modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
margin_left = 1370.0
margin_top = 175.0
margin_right = 1470.0
margin_bottom = 463.0
rect_scale = Vector2( 2.85, 2.85 )
theme = ExtResource( 3 )
alignment = 1

[node name="dif_chiari" type="VBoxContainer" parent="."]
self_modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
margin_left = 1680.0
margin_top = 175.0
margin_right = 1780.0
margin_bottom = 463.0
rect_scale = Vector2( 2.85, 2.85 )
theme = ExtResource( 3 )
alignment = 1

[node name="att_chiari" type="VBoxContainer" parent="."]
self_modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
margin_left = 1050.0
margin_top = 175.0
margin_right = 1150.0
margin_bottom = 463.0
rect_scale = Vector2( 2.85, 2.85 )
theme = ExtResource( 3 )
alignment = 1

[node name="lista_scuri" type="VBoxContainer" parent="."]
margin_left = 425.0
margin_top = 175.0
margin_right = 525.0
margin_bottom = 463.0
rect_scale = Vector2( 2.85, 2.85 )
focus_mode = 2
size_flags_vertical = 2
theme = ExtResource( 5 )
alignment = 1

[node name="dif_scuri" type="VBoxContainer" parent="."]
margin_left = 110.0
margin_top = 175.0
margin_right = 210.0
margin_bottom = 463.0
rect_scale = Vector2( 2.85, 2.85 )
focus_mode = 2
size_flags_vertical = 2
theme = ExtResource( 5 )
alignment = 1

[node name="att_scuri" type="VBoxContainer" parent="."]
margin_left = 730.0
margin_top = 175.0
margin_right = 830.0
margin_bottom = 463.0
rect_scale = Vector2( 2.85, 2.85 )
focus_mode = 2
size_flags_vertical = 2
theme = ExtResource( 5 )
alignment = 1

[node name="forza_chiari" type="Label" parent="."]
margin_left = 1725.0
margin_top = 90.0
margin_right = 1875.0
margin_bottom = 150.0
theme = ExtResource( 3 )

[node name="forza_scuri" type="Label" parent="."]
margin_left = 150.0
margin_top = 90.0
margin_right = 300.0
margin_bottom = 150.0
theme = ExtResource( 3 )

[node name="sposta" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="reset_button" type="Button" parent="."]
margin_left = 133.0
margin_top = 1025.0
margin_right = 214.0
margin_bottom = 1062.0
rect_scale = Vector2( 1.75, 1.75 )
hint_tooltip = "Annulla gli spostamenti e riporta alla scelta iniziale delle squadre"
theme = ExtResource( 6 )
text = "reset"

[node name="back" type="Button" parent="."]
margin_left = 1550.0
margin_top = 1025.0
margin_right = 1766.0
margin_bottom = 1062.0
rect_scale = Vector2( 1.75, 1.75 )
hint_tooltip = "Ricomincia tutto dall'inizio"
theme = ExtResource( 6 )
text = "torna all'inizio"

[connection signal="pressed" from="reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="button_up" from="back" to="." method="_on_back_button_up"]
